objects/Batch__c.object
<CustomObject>
    <description>Samples are divided into batches based on date received and SOW</description>
    <fields>
        <fullName>Account_Code__c</fullName>
        <formula>SOW__r.Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Label__c</fullName>
        <label>Batch Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_text__c</fullName>
        <formula>IF 
((Batch_Number__c&gt;1 &amp;&amp; Batch_Number__c&lt;10), &apos;0&apos;+TEXT(Batch_Number__c),
(IF((Batch_Number__c&gt;=10),TEXT(Batch_Number__c),
&apos;01&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch # text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Manifest_link__c</fullName>
        <label>E-Manifest link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expected_Reporting_Quarter__c</fullName>
        <label>Expected Reporting Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1-2020</fullName>
                    <label>2020Q1</label>
                </value>
                <value>
                    <fullName>Q2-2020</fullName>
                    <label>2020Q2</label>
                </value>
                <value>
                    <fullName>Q3-2020</fullName>
                    <label>2020Q3</label>
                </value>
                <value>
                    <fullName>Q4-2020</fullName>
                    <label>2020Q4</label>
                </value>
                <value>
                    <fullName>Q1-2021</fullName>
                    <label>2021Q1</label>
                </value>
                <value>
                    <fullName>Q2-2021</fullName>
                    <label>2021Q2</label>
                </value>
                <value>
                    <fullName>Q3-2021</fullName>
                    <label>2021Q3</label>
                </value>
                <value>
                    <fullName>Q4-2021</fullName>
                    <label>2021Q4</label>
                </value>
                <value>
                    <fullName>Q1-2022</fullName>
                    <label>2022Q1</label>
                </value>
                <value>
                    <fullName>Q4-2019</fullName>
                    <isActive>false</isActive>
                    <label>Q4-2019</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Label2__c</fullName>
        <description>Hidden test field</description>
        <label>Label2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Forecast__c</fullName>
        <inlineHelpText>Number of samples forecast for this batch</inlineHelpText>
        <label>Number of Samples Expected</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>TEXT(SOW__r.Product_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>SOW__r.LIMS_Project_ID_display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sends email informing that this batch is ready for scheduling.</inlineHelpText>
        <label>Ready for Scheduling?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <label>Client&apos;s Expected Reporting Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Name__c</fullName>
        <formula>SOW__r.SOW_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Number__c</fullName>
        <formula>SOW__r.SOW_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <inlineHelpText>This is the SOW that the batch belongs to</inlineHelpText>
        <label>SOW</label>
        <referenceTo>SOW__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <label>Client&apos;s Expected Shipment Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Account__c</fullName>
        <formula>SOW__r.Sponsor_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sponsor Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Batch_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field. Used to rename Batch. Called from PB &quot;SOW: Update Batch&quot;</description>
        <label>Update Batch Name</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Label__c</columns>
        <columns>Number_of_Samples_Forecast__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Project_ID__c</columns>
        <columns>SOW__c</columns>
        <columns>SOW_Name__c</columns>
        <columns>Sponsor_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Astra_Zeneca_Batches</fullName>
        <columns>NAME</columns>
        <columns>SOW_Name__c</columns>
        <columns>Batch_Number__c</columns>
        <columns>Batch_Label__c</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Shipment_Date__c</columns>
        <columns>Product_Name__c</columns>
        <columns>SOW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sponsor_Account__c</field>
            <operation>equals</operation>
            <value>AstraZeneca,Medimmune</value>
        </filters>
        <label>Astra-Zeneca Batches</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B{00000}</displayFormat>
        <label>Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>